--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost/medicalia
 
 #config hibarnate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
